--- a/style.scss
+++ b/style.scss
@@ -50,8 +50,15 @@ button#start-btn,
   font-weight: bold;
   font-size: 1em;
   white-space: nowrap;
+  margin-bottom: 2em;
   &:hover {
     background-color: deeppink;
     color: #dddcdf;
   }
+}
+p#player-el {
+  color: crimson;
+  font-weight: 900;
+  font-size: 2rem;
+  -webkit-text-stroke: 2px azure;
 }
